--- a/MYProject/.settings/org.eclipse.wst.common.component
+++ b/MYProject/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="SomeProject">
+    <wb-module deploy-name="MYProject">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="SomeProject"/>
-        <property name="java-output-path" value="/SomeProject/build/classes"/>
+        <property name="context-root" value="MYProject"/>
+        <property name="java-output-path" value="/MYProject/build/classes"/>
     </wb-module>
 </project-modules>
